bug 37842 bug 37844 bug 37802
- add LocalConfigUpgrade similar to LdapUpgrade

- switch to CMS gc for new installs

- upgrade step for CMS switch also health checks and
  makes sure you have all of these options:
      -XX:+UseConcMarkSweepGC
      -verbose:gc
      -XX:+PrintGCDetails
      -XX:+PrintGCTimeStamps
      -XX:+PrintGCApplicationStoppedTime
      -XX:NewRatio
      -XX:PermSize
      -XX:MaxPermSize
      -XX:SoftRefLRUPolicyMSPerMB

- new local config variable mailboxd_java_heap_new_size_percent
  used by the start script to determine -Xmn value.  Default -Xmn is
  25% of -Xmx value.  -Xmx and -Xms are still derived (just as
  before) from mailboxd_java_heap_memory_percent.  QA team please
  verify that changing the local configs adjusts Xmn/Xms/Xmx sent to
  the process by checking ps output.

- use zmthrdump to capture stacktrace during zmmailboxdctl stop.
  Change name from stacktrace.pid to stacktrace.pid.timestamp

- get rid of mailboxd_java_home

Upgrade changes that need to be done:

- Run (this saves old config to /o/z/c/localconfig.xml.pre.6.0.0RC1):

    zmjava com.zimbra.common.localconfig.LocalConfigUpgrade \
        --bug 37842 --bug 37844 --bug 37802 \
        --tag .pre.6.0.0RC1

- Remove any reference to mailboxd_java_home from zmupgrade.pm that
  may no longer be needed and won't break upgrade path

http://bugzilla.zimbra.com/show_bug.cgi?id=37842

Copied from Perforce
 Change: 161272